# Invoice_model

./: Streamlit_app.py  ai_questions.json  answer_converter.py  env.json  invoice_analyser.py  pdf_reader.py  pyproject.toml
requirements/: requirements.txt
