[tool.poetry]
name = "invoice_model"
version = "0.1.0"
description = "This project based on llama model and provide some functions to read pdf documents"
authors = ["Your Name <you@example.com>"]
license = "-"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
langchain = "^0.3.14"
pandas = "^2.2.3"
faiss-cpu = "^1.9.0"
langchain-community = "^0.3.14"
pypdf = "^5.1.0"
langchain-openai = "^0.2.14"
langchain-ollama = "^0.2.2"
gpt4all = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
